--- a/home.html
+++ b/home.html
@@ -3,22 +3,22 @@
   <head>
     <title>The Yun Times</title>
     <style>
-      div {
-        height: 150px;
-        width: 150px;
+      a {
+        color: wheat;
         background-color: tomato;
+        text-decoration: none;
+        padding: 3px 5px;
+        border-radius: 5px;
+        font-size: 55px;
+        transition: all 5s ease-in-out;
       }
-      span {
-        background-color: turquoise;
+      a:hover {
+        color: tomato;
+        background-color: wheat;
       }
     </style>
   </head>
   <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <span>hello</span>
-    <span>hello</span>
-    <span>hello</span>
+    <a href="#">Go home</a>
   </body>
 </html>
