--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
     <div id="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
-        <!-- To Do: Wifi Icon -->
+        <i class="fa-solid fa-wifi"></i>
       </div>
       <div class="status-bar__column">
         <span>18:43</span>
       </div>
       <div class="status-bar__column">
         <span>110%</span>
-        <!-- Battery Icon -->
-        <!-- Lightning Icon -->
+        <i class="fa-solid fa-battery-full"></i>
+        <i class="fa-solid fa-bolt"></i>
       </div>
     </div>
+    <script
+      src="https://kit.fontawesome.com/c16d2d04be.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
