--- a/friends.html
+++ b/friends.html
@@ -47,16 +47,18 @@
         </div>
         <div class="user-component__column"></div>
       </div>
+
       <div class="friends-screen__channel">
         <div class="friends-screen__channel-header">
           <span>Channel</span>
           <i class="fa-solid fa-chevron-up fa-xs"></i>
         </div>
+
         <div class="user-component">
           <div class="user-component__column">
             <img src="img/roto-grip-rst-x-2.jpeg" class="user-component__avatar user-component__avatar--sm" />
             <div class="user-component__text">
-              <h4 class="user-component__title">Channel</h4>
+              <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
               <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
             </div>
           </div>
