--- a/chats.html
+++ b/chats.html
@@ -34,25 +34,34 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img src="img/roto-grip-rst-x-2.jpeg" class="user-component__avatar" />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Yun</h4>
-            <h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="img/roto-grip-rst-x-2.jpeg"
+              class="user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Yun</h4>
+              <h6 class="user-component__subtitle">
+                Please check My Kokoa Account Info
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:22</span>
+            <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
-        </div>
-      </div>
+      </a>
     </main>
 
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html"><i class="fa-regular fa-user fa-2x"> </i></a>
+          <a class="nav__link" href="friends.html"
+            ><i class="fa-regular fa-user fa-2x"> </i
+          ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
@@ -61,14 +70,21 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+          <a class="nav__link" href="find.html"
+            ><i class="fa-solid fa-magnifying-glass fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="more.html"><i class="fa-solid fa-ellipsis fa-2x"></i></a>
+          <a class="nav__link" href="more.html"
+            ><i class="fa-solid fa-ellipsis fa-2x"></i
+          ></a>
         </li>
       </ul>
     </nav>
 
-    <script src="https://kit.fontawesome.com/c16d2d04be.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/c16d2d04be.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
