--- a/settings.html
+++ b/settings.html
@@ -25,29 +25,40 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <i class="fa-solid fa-angle-left fa-2x"></i>
+        <a href="more.html">
+          <i class="fa-solid fa-angle-left fa-2x"></i>
+        </a>
       </div>
       <div class="alt-header__column">
         <h1 class="alt-header__title">Settings</h1>
       </div>
       <div class="alt-header__column">
-        <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+        <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
       </div>
     </header>
 
     <main class="main-screen">
       <ul class="settings-list">
         <li class="settings__setting">
-          <i class="fa-solid fa-bullhorn"></i>
-          <span>Notices</span>
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-bullhorn"></i>
+            <span>Notices</span>
+          </div>
+          <div class="settings__setting-column"></div>
         </li>
         <li class="settings__setting">
-          <i class="fa-solid fa-flask"></i>
-          <span>Kokoa Lab</span>
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-flask"></i>
+            <span>Kokoa Lab</span>
+          </div>
+          <div class="settings__setting-column"></div>
         </li>
         <li class="settings__setting">
-          <i class="fa-solid fa-circle-info"></i>
-          <span>Version</span>
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-circle-info"></i>
+            <span>Version</span>
+          </div>
+          <div class="settings__setting-column">Latest Version</div>
         </li>
       </ul>
     </main>
@@ -55,7 +66,9 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html"><i class="fa-regular fa-user fa-2x"> </i></a>
+          <a class="nav__link" href="friends.html"
+            ><i class="fa-regular fa-user fa-2x"> </i
+          ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
@@ -64,14 +77,21 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+          <a class="nav__link" href="find.html"
+            ><i class="fa-solid fa-magnifying-glass fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="more.html"><i class="fa-solid fa-ellipsis fa-2x"></i></a>
+          <a class="nav__link" href="more.html"
+            ><i class="fa-solid fa-ellipsis fa-2x"></i
+          ></a>
         </li>
       </ul>
     </nav>
 
-    <script src="https://kit.fontawesome.com/c16d2d04be.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/c16d2d04be.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
