--- a/chat.html
+++ b/chat.html
@@ -25,7 +25,7 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <a href="more.html">
+        <a href="chats.html">
           <i class="fa-solid fa-angle-left fa-2x"></i>
         </a>
       </div>
@@ -38,7 +38,9 @@
       </div>
     </header>
 
-    <main class="main-screen"></main>
+    <main class="main-screen main-chat">
+      <div class="chat__timestamp">Saturday, July 23, 2022</div>
+    </main>
 
     <script
       src="https://kit.fontawesome.com/c16d2d04be.js"
