--- a/chat.html
+++ b/chat.html
@@ -40,6 +40,17 @@
 
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Saturday, July 23, 2022</div>
+
+      <div class="message-row">
+        <img src="img/roto-grip-rst-x-2.jpeg" />
+        <div class="message-row__content">
+          <span class="message__author">Yun</span>
+          <div class="message__info">
+            <span class="message__bubble">Hi!</span>
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script
