--- a/friends.html
+++ b/friends.html
@@ -33,13 +33,17 @@
     </header>
 
     <a id="friends-display-link">
-      <i class="fa-solid fa-circle-info"></i> Friends' Names Display <i class="fa-solid fa-chevron-right fa-xs"></i>
+      <i class="fa-solid fa-circle-info"></i> Friends' Names Display
+      <i class="fa-solid fa-chevron-right fa-xs"></i>
     </a>
 
     <main class="friends-screen">
       <div class="user-component">
         <div class="user-component__column">
-          <img src="img/roto-grip-rst-x-2.jpeg" class="user-component__avatar user-component__avatar--xl" />
+          <img
+            src="img/roto-grip-rst-x-2.jpeg"
+            class="user-component__avatar user-component__avatar--xl"
+          />
           <div class="user-component__text">
             <h4 class="user-component__title">Yun</h4>
             <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
@@ -56,9 +60,14 @@
 
         <div class="user-component">
           <div class="user-component__column">
-            <img src="img/roto-grip-rst-x-2.jpeg" class="user-component__avatar user-component__avatar--sm" />
+            <img
+              src="img/roto-grip-rst-x-2.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
             <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
               <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
             </div>
           </div>
@@ -75,7 +84,9 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html"><i class="fa-solid fa-user fa-2x"> </i></a>
+          <a class="nav__link" href="friends.html">
+            <i class="fa-solid fa-user fa-2x"> </i>
+          </a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
@@ -84,14 +95,25 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+          <a class="nav__link" href="find.html">
+            <i class="fa-solid fa-magnifying-glass fa-2x"></i>
+          </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="more.html"><i class="fa-solid fa-ellipsis fa-2x"></i></a>
+          <a class="nav__link" href="more.html">
+            <i class="fa-solid fa-ellipsis fa-2x"></i>
+          </a>
         </li>
       </ul>
     </nav>
 
-    <script src="https://kit.fontawesome.com/c16d2d04be.js" crossorigin="anonymous"></script>
+    <div id="splash-screen">
+      <i class="fa-solid fa-comment fa-2x"></i>
+    </div>
+
+    <script
+      src="https://kit.fontawesome.com/c16d2d04be.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
