--- a/find.html
+++ b/find.html
@@ -59,7 +59,9 @@
       <div class="open-chat">
         <div class="open-chat__header">
           <h4 class="open-chat__title">Open Chat</h4>
-          <span> Go to Openchat Home <i class="fa-solid fa-chevron-right fa-xs"></i> </span>
+          <span>
+            Go to Openchat Home <i class="fa-solid fa-chevron-right fa-xs"></i>
+          </span>
         </div>
         <div class="open-post">
           <div class="open-post__column">
@@ -75,7 +77,9 @@
           <div class="open-post__column">
             <div class="open-post__photo">
               <img src="img/roto-grip-rst-x-2.jpeg" />
-              <div class="open-post__heart-count"><i class="fa-solid fa-heart fa-xs"></i><span>326</span></div>
+              <div class="open-post__heart-count">
+                <i class="fa-solid fa-heart fa-xs"></i><span>326</span>
+              </div>
             </div>
           </div>
         </div>
@@ -85,7 +89,9 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html"><i class="fa-regular fa-user fa-2x"> </i></a>
+          <a class="nav__link" href="friends.html"
+            ><i class="fa-regular fa-user fa-2x"> </i
+          ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
@@ -94,14 +100,21 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+          <a class="nav__link" href="find.html"
+            ><i class="fa-solid fa-magnifying-glass fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="more.html"><i class="fa-solid fa-ellipsis fa-2x"></i></a>
+          <a class="nav__link" href="more.html"
+            ><i class="fa-solid fa-ellipsis fa-2x"></i
+          ></a>
         </li>
       </ul>
     </nav>
 
-    <script src="https://kit.fontawesome.com/c16d2d04be.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/c16d2d04be.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
