--- a/chat.html
+++ b/chat.html
@@ -75,6 +75,10 @@
       </div>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/c16d2d04be.js"
       crossorigin="anonymous"
