--- a/chats.html
+++ b/chats.html
@@ -82,6 +82,10 @@
       </ul>
     </nav>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/c16d2d04be.js"
       crossorigin="anonymous"
