--- a/friends.html
+++ b/friends.html
@@ -111,6 +111,10 @@
       <i class="fa-solid fa-comment fa-2x"></i>
     </div>
 
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/c16d2d04be.js"
       crossorigin="anonymous"
