--- a/more.html
+++ b/more.html
@@ -39,7 +39,10 @@
     <main class="main-screen more-screen">
       <div class="user-component">
         <div class="user-component__column">
-          <img src="img/roto-grip-rst-x-2.jpeg" class="user-component__avatar user-component__avatar--xl" />
+          <img
+            src="img/roto-grip-rst-x-2.jpeg"
+            class="user-component__avatar user-component__avatar--xl"
+          />
           <div class="user-component__text">
             <h4 class="user-component__title">Yun</h4>
             <h6 class="user-component__subtitle">+1 234-567-8900</h6>
@@ -91,7 +94,9 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html"><i class="fa-regular fa-user fa-2x"> </i></a>
+          <a class="nav__link" href="friends.html"
+            ><i class="fa-regular fa-user fa-2x"> </i
+          ></a>
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
@@ -100,14 +105,25 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+          <a class="nav__link" href="find.html"
+            ><i class="fa-solid fa-magnifying-glass fa-2x"></i
+          ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="more.html"><i class="fa-solid fa-ellipsis fa-2x"></i></a>
+          <a class="nav__link" href="more.html"
+            ><i class="fa-solid fa-ellipsis fa-2x"></i
+          ></a>
         </li>
       </ul>
     </nav>
 
-    <script src="https://kit.fontawesome.com/c16d2d04be.js" crossorigin="anonymous"></script>
+    <div id="no-mobile">
+      <span>Your screen is too big ㅠㅠ</span>
+    </div>
+
+    <script
+      src="https://kit.fontawesome.com/c16d2d04be.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
